--- a/client/src/components/UploadForm.css
+++ b/client/src/components/UploadForm.css
@@ -30,3 +30,18 @@
   border-radius: 3px;
   cursor: pointer;
 }
+
+.img-preview {
+  width: 0%;
+  opacity: 0;
+  display: block;
+  margin: 0 auto 20px auto;
+  border-radius: 10px;
+  border: 5px solid black;
+}
+
+.img-preview-show {
+  width: 30%;
+  opacity: 1;
+  transition: 0.5s;
+}
