[Add]Clien 사진 공개/비공개 설정 완료

--- a/client/src/pages/RegisterPage.css
+++ b/client/src/pages/RegisterPage.css
@@ -6,11 +6,17 @@
 .inputDiv {
   margin-top: 10px;
 }
-input {
+/* input {
   width: 100%;
   height: 20px;
   margin: 1px 0px;
-}
+} */
 button {
   margin-top: 20px;
+}
+
+.inputDiv input {
+  width: 100%;
+  height: 20px;
+  margin: 1px 0px;
 }
